// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Row/> should find cuke-row classnames 1`] = `
<div>
  <div
    class="cuke-row"
  >
    <div
      class="cuke-col cuke-col-12"
    >
      12
    </div>
    <div
      class="cuke-col cuke-col-6"
    >
      6
    </div>
    <div
      class="cuke-col cuke-col-2 cuke-col-offset-4"
    >
      2
    </div>
  </div>
</div>
`;

exports[`<Row/> should render a <Row/> components 1`] = `
<div
  class="cuke-row"
>
  <div
    class="cuke-col cuke-col-12"
  />
  <div
    class="cuke-col cuke-col-12"
  />
</div>
`;
